.. _v1.15.0:

1.15.0 - 2017-??-??
-------------------

New Features:
  * Add :meth:`Surface.map_to_image` and :meth:`Surface.unmap_image` :bug:`51`
  * Add :class:`RasterSourcePattern` :bug:`48`
  * Add :class:`Glyph` :bug:`53`
  * Add :class:`Rectangle` :bug:`54`
  * Add :class:`TextCluster` :bug:`61`
  * Add :meth:`ScaledFont.text_to_glyphs`

Changes:
  * Pycairo instances wrapping the same underlying cairo object now compare
    equally.
  * Functions which returned a cairo error with cairo.Status.NO_MEMORY no
    longer raise MemoryError, but a subclass of cairo.Error and MemoryError.
    Similarly errors with cairo.Status.READ_ERROR and cairo.Status.WRITE_ERROR
    no longer raise IOError, but a subclass of cairo.Error and IOError.
    :bug:`55`
  * Some functions which previously returned a tuple now return the tuple
    subclass :class:`Rectangle`

Fixes:
  * Fix a crash with :meth:`Surface.get_device` :bug:`57`


.. _v1.14.0:

1.14.0 - 2017-07-12
-------------------

General:
  * Requires at least cairo 1.13.1 (The snapshop in Ubuntu 14.04)

Tests:
  * Optional `Hypothesis <https://hypothesis.readthedocs.io>`__ tests.

New Features:
  * Add :meth:`Surface.set_device_scale` and :meth:`Surface.get_device_scale`.
    :pr:`44` (:user:`Sander Sweers <infirit>`)
  * Add :class:`Device` :pr:`45`
  * Add :meth:`Surface.get_device` :pr:`45`
  * Add :class:`ScriptDevice` and :class:`ScriptMode` :pr:`46`
  * Add :class:`ScriptSurface` :bug:`17`
  * Add :attr:`Status.JBIG2_GLOBAL_MISSING`
  * Add :meth:`Format.stride_for_width`
  * Add :class:`TextClusterFlags` and :class:`SurfaceObserverMode`
  * Add :meth:`Gradient.get_color_stops_rgba`
  * Add :class:`TeeSurface`
  * Add :class:`MeshPattern`


.. _v1.13.4:

1.13.4 - 2017-07-12
-------------------

Fixes:
  * Fix a rare crash with :meth:`get_data() <ImageSurface.get_data>` under
    Python 3 (1.13.3 regression).


.. _v1.13.3:

1.13.3 - 2017-06-01
-------------------

Fixes: